--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start:dev": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "heroku-postbuild": "cd client && npm run build",
-    "install": "cd server && npm i && cd../client && npm i"
+    "install": "cd server && npm i && cd ../client && npm i",
+    "build": "cd client && npm run build"
   },
   "author": "",
   "license": "ISC",
