try different env

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI="mongodb+srv://crisgraciano:s7$cuSgDP!P6DR-@cluster0.i0fwyau.mongodb.net/leather-store?retryWrites=true&w=majority"
+MONGODB_URI="mongodb+srv://edpris10:Spiesmont21!@cluster0.nfz8mbx.mongodb.net/?retryWrites=true&w=majority"
