--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@apollo/react-hooks": "^4.0.0",
-    "if-env": "^1.0.4"
+    "if-env": "^1.0.4",
+    "stripe": "^11.3.0"
   }
 }
