--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@apollo/react-hooks": "^4.0.0",
     "if-env": "^1.0.4",
+    "react-dom": "^18.2.0",
     "stripe": "^11.3.0"
   }
 }
